# tse

./: LICENSE  Makefile  format.sh
src/: CMakeLists.txt  os.h  qfmt.h  test.c  tse.h
src/log/: CMakeLists.txt  log.c  log.h
src/test/: CMakeLists.txt  linux.c  main.c
src/tse/: CMakeLists.txt  const.h  lut.c  midi.c  os.h  test.c  tse.h
